# My-C-journey

./: .gitignore  AssignMent  AssignMent.c  CMakeLists.txt  Countdown.cpp  DL  DL.c  DTS  DTS.c  Function.cpp  FunctionHBD  FunctionHBD.cpp  Function_Overloading  Function_Overloading.cpp  HelloWorld  LC.c  LandC  LandC.c  Local_&Global_variables.cpp  MLG  MLG.c  NI  NI.c  Newname_ConcatFunction  Newname_ConcatFunction.cpp  Operation  Operation.c  Primechecker  Primechecker.c  Quadratic  Quadratic.c  RandomgenpseudorandomNum.cpp  Rectangle  Rectangle.c  SI_and_CI.c  Sphere  Sphere.c  Temperature  Temperature.c  brocode.cpp  (+38 more)
Assignment/: 3by3_Array_Matrix.cpp  Array_Reverse_Search_spaceRemoval  Array_Reverse_Search_spaceRemoval.cpp  Array_Sort_Ascend.cpp  Arrayreverse  Arrayreverse.cpp  Even_Odd_Array  Even_Odd_Array.cpp  Market_Receipt  Market_Receipt.cpp  Multipication_Table.cpp  Number_small_Array  Number_small_Array.cpp  Odd'n'even  Odd'n'even.cpp  Rectangle  Rectangle.cpp  Student_Record   Student_Record .cpp  Timetable
ClassPrac/: block  block.cpp  main.cpp  main2.cpp  main3.cpp
