cmake_minimum_required(VERSION 4.0)
project(c_and_cpp C)

set(CMAKE_C_STANDARD 11)

add_executable(c_and_cpp
        AssignMent.c
        caesarDecrypt.c
        caesarEncrypt.c
        charEncode.c
        class.c
        dataType.c
        DL.c
        DTS.c
        HelloWorld.c
        LandC.c
        main.c
        MLG.c
        NI.c
        Operation.c
        Primechecker.c
        Rectangle.c
        SI_and_CI.c
        Sphere.c
        supeMarket.c
        Temperature.c
        upperTolower.c
        Quadratic.c
        tax.c
        tax.h
        calc.c
        calc.h
        tempAndlogicOps.c)
