cmake_minimum_required(VERSION 4.1)
project(CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP main.cpp
        Assignment/Odd'n'even.cpp
        Assignment/Multipication_Table.cpp
        Countdown.cpp
        Assignment/Rectangle.cpp
        ClassPrac/main.cpp
        ClassPrac/main2.cpp
        ClassPrac/block.cpp
        brocode.cpp
        brocode.cpp
        brocode2.cpp
        RandomgenpseudorandomNum.cpp
        number_guessingLoop.cpp
        FunctionHBD.cpp
        Assignment/Arrayreverse.cpp
        Assignment/Even_Odd_Array.cpp
        Assignment/Number_small_Array.cpp
        Assignment/Arrayreverse.cpp
        Assignment/3by3_Array_Matrix.cpp
        Assignment/Array_Sort_Ascend.cpp
        ClassPrac/main3.cpp
        Assignment/Market_Receipt.cpp
        "Assignment/Student_Record .cpp")
